Fixed text alignment and added arrow for scrolling to top

--- a/itgp_solutions_app/frontend/src/Components/Footer/Footer.css
+++ b/itgp_solutions_app/frontend/src/Components/Footer/Footer.css
@@ -160,12 +160,12 @@
 }
 
 .modal-body h2, p, ul {
-    text-align: justify;
+    text-align: center;
 }
 
 .modal-footer {
     padding: 10px;
-    text-align: left;
+    text-align: center;
 }
 
 .modal-footer .btn {
