--- a/itgp_solutions_app/frontend/src/Components/NavBar/NavBar.css
+++ b/itgp_solutions_app/frontend/src/Components/NavBar/NavBar.css
@@ -88,13 +88,12 @@
     margin-bottom: 10px;
 }
 
-.nav-item-side{
-    margin-left: 10px;
+.nav-item-side {
     width: 100%;
 }
 
 .languages-nav-bar .nav-link-side {
-    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .no-scroll {
