--- a/itgp_solutions_app/frontend/src/Components/Procedure/Procedure.css
+++ b/itgp_solutions_app/frontend/src/Components/Procedure/Procedure.css
@@ -10,7 +10,7 @@
 
 .procedure-content {
   max-width: 1200px;
-  text-align: justify;
+  text-align: center;
   padding: 20px;
 }
 
